2003-05-25  Wakaba  <w@offweb.ddo.jp>

	* XML.pm (new): Support new arguments, 'qname' and 'namespace_prefix'.
	(_ns_parse_qname): New.
	(namespace_prefix): New.

2003-05-24  Wakaba  <w@offweb.ddo.jp>

	* XML/: New directory.
	* XML.pm: Update to support XML/Parser.pm.
	* TODO: New.

2003-05-11  Wakaba  <w@offweb.ddo.jp>

	* XML.pm (attribute_value): Output #reference as is.

2003-04-29  Wakaba  <w@offweb.ddo.jp>

	* XML.pm: Bug fixes.
	(content_spec): New function.
	(inner_xml#pi): If pi's content has '?>', replace to '? >'. (same behavior
	as XSLT's.) (Was replaced to '?&gt;'.)
	(#reference, #section): New support.
	(#declaration): All XML's declarations are supported.
	(inner_text%output_ref_as_is): New option.
	(_check_name): New.
	(flag): New.
	(POD:NODE TYPES): New documentation.

2003-04-27  Wakaba  <w@offweb.ddo.jp>

	* ChangeLog: New file.

2003-04-26  Wakaba  <w@offweb.ddo.jp>

	* XML.pm: New module.