@@ -1,0 +1,21 @@
+XML.pm:
+	* XML 1.1
+	* XML Namespace 1.1
+	* Don't do xmlns:foo="" in XML Namespace 1.0
+	* Keep ns prefix info.
+
+XML/Parser.pm:
+	* Markup sections INCLUDE and IGNORE
+	* Resolving of ENTITYes
+	* Keep source/line/pos info. within entity/attr nodes
+
+XML/DOM.pm:
+
+XML/SAX.pm:
+
+XML/XSLT.pm:
+
+XML/XPath.pm:
+
+*:
+	Sharin no sai-hatsumei!
