@@ -1,3 +1,8 @@
+2003-06-16  Wakaba  <w@suika.fam.cx>
+
+	* XML.pm: Some bug fixes and addition of features to support
+	SuikaWiki::Markup::XML::Parser.
+
 2003-05-25  Wakaba  <w@offweb.ddo.jp>
 
 	* XML.pm (new): Support new arguments, 'qname' and 'namespace_prefix'.
